[package]
name = "v2ntoquan"
version = "0.1.0"
authors = ["rami3l <597974733.qq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
base64 = "0.10"
regex = "1"
lazy_static = "1.4"
reqwest = "0.9"