[package]
name = "v2ntoquan"
version = "0.1.0"
authors = ["rami3l <597974733.qq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
base64 = "0.12.3"
regex = "1.3.9"
lazy_static = "1.4.0"
anyhow = "1.0.31"
